src/test/ui/unboxed-closures/unboxed-closure-sugar-default.stderr
error[E0277]: the trait bound `dyn Foo<(isize,), isize, Output = ()>: Eq<dyn Foo<(isize,), Output = ()>>` is not satisfied
  --> $DIR/unboxed-closure-sugar-default.rs:21:5
   |
LL | fn eq<A: ?Sized,B: ?Sized>() where A : Eq<B> { }
   | -------------------------------------------- required by `eq`
...
LL |     eq::<dyn Foo<(isize,), isize, Output=()>, dyn Foo(isize)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Eq<dyn Foo<(isize,), Output = ()>>` is not implemented for `dyn Foo<(isize,), isize, Output = ()>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
